--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,9 +54,11 @@ h2
 	h1 a
 	{
 		font-family: "Lobster", Helvetica, Arial, sans-serif;
-		text-shadow: 0 2px 0 lighten($blue, 20);
+		//text-shadow: 0 2px 0 lighten($blue, 20);
 		font-size: 4em;
-		color: lighten($pink, 20);
+		color: rgba(lighten($blue, 10), 0.5);
+		text-shadow: 3px 3px 0 rgba($pink, 0.5);
+		//color: lighten($pink, 20);
 		-webkit-transition-property: color, text-shadow;
 		-webkit-transition-duration: .5s;
 		-webkit-transition-timing-function: ease;
@@ -64,7 +66,7 @@ h2
 		
 		&:hover
 		{
-			color: $pink;
+			color: lighten($blue, 20);
 		}
 	}
 	
