--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@ body {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-size: 100%;
   color: #107da3;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   text-shadow: 0 1px 0 #FFF;
   background-image: url("http://subtlepatterns.com/patterns/subtlenet2.png"); }
 
@@ -24,6 +27,29 @@ hr {
 
 section {
   margin: 25px auto; }
+  section p {
+    font-size: .9em;
+    margin: 10px; }
+  section ul.skills {
+    list-style-type: hebrew;
+    margin: 10px;
+    font-size: .85em; }
+    section ul.skills li {
+      margin-left: 40px; }
+  section:hover h2 {
+    width: 98%;
+    color: #d3649f;
+    -webkit-transition: all 1s ease-in-out; }
+
+h1, h2, h3, h4, h5, h6 {
+  margin-left: 5px;
+  margin-bottom: 5px; }
+
+h2 {
+  width: 50%;
+  border-bottom: 1px solid;
+  box-shadow: 0 2px 0 #CCC;
+  -webkit-transition: all 1s ease-in-out; }
 
 #top {
   text-align: center;
@@ -33,12 +59,13 @@ section {
     font-size: 4em;
     color: rgba(21, 161, 209, 0.5);
     text-shadow: 3px 3px 0 rgba(211, 100, 159, 0.5);
-    -webkit-transition-property: color, text-shadow;
+    -webkit-transition-property: all;
     -webkit-transition-duration: .5s;
     -webkit-transition-timing-function: ease;
     text-decoration: none; }
     #top h1 a:hover {
-      color: #2ebaeb; }
+      color: #2ebaeb;
+      -webkit-animation: shake .5s linear; }
   #top a {
     font-size: 1.2em; }
 
@@ -121,10 +148,11 @@ nav {
       bottom: 0px;
       color: #FFF;
       background-color: #000;
-      opacity: .7; }
+      opacity: .7;
+      -webkit-transition: opacity .5s ease; }
       #work-slider ul li .rollover h4 {
         font-weight: 600;
-        padding: 0px 5px;
+        padding: 0 3%;
         margin-top: 8px;
         margin-bottom: 0px; }
         #work-slider ul li .rollover h4 a {
@@ -132,6 +160,69 @@ nav {
           #work-slider ul li .rollover h4 a:hover {
             color: #d3649f; }
       #work-slider ul li .rollover p {
-        padding: 0px 5px;
+        padding: 0 2%;
         margin-top: 0px;
         margin-bottom: 5px; }
+      #work-slider ul li .rollover:hover {
+        opacity: 1; }
+
+footer {
+  width: 100%;
+  background-color: #FFF;
+  padding: 2%;
+  border-top: 2px solid #d3649f;
+  -webkit-animation: footerBorder 3s infinite linear; }
+
+@-webkit-keyframes footerBorder {
+  0% {
+    border-color: #d3649f; }
+
+  33% {
+    border-color: #107da3; }
+
+  66% {
+    border-color: #d3649f; } }
+
+@-webkit-keyframes shake {
+  0% {
+    margin-left: -20px;
+    margin-right: 0px; }
+
+  10% {
+    margin-left: 0px;
+    margin-right: -20px; }
+
+  20% {
+    margin-left: -20px;
+    margin-right: 0px; }
+
+  30% {
+    margin-left: 0px;
+    margin-right: -20px; }
+
+  40% {
+    margin-left: -20px;
+    margin-right: 0px; }
+
+  50% {
+    margin-left: 0px;
+    margin-right: -20px; }
+
+  60% {
+    margin-left: -20px;
+    margin-right: 0px; }
+
+  70% {
+    margin-left: 0px;
+    margin-right: -20px; }
+
+  80% {
+    margin-left: -20px;
+    margin-right: 0px; }
+
+  90% {
+    margin-left: 0px;
+    margin-right: -20px; }
+
+  100% {
+    margin: none; } }
